<resources>
    <string name="app_name">Grafo Studio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="abrir">Abrir</string>
    <string name="salvar">Salvar</string>
    <string name="algoritmos">Algoritmos</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="grid_layout">Algoritmos</string>
    <string name="grid_layout_pre_definidos">\t\t\t\t\tGrafos \nPré-Definidos</string>
    <string name="grid_1_1">Me</string>
    <string name="grid_1_2">Family</string>
    <string name="grid_2_1">Lovely</string>
    <string name="grid_2_2">Team</string>
    <string name="grid_3_1">Friends</string>
    <string name="grid_3_2">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arquivos">Arquivos</string>
    <string name="comunicar">Comunicar</string>
    <string name="exportar">Exportar</string>
    <string name="estudio">Estúdio</string>
    <string name="pre_definidos">Pré-Definidos</string>
    <string name="comecar">Começar</string>
    <string name="retroceder">Retroceder</string>
    <string name="anterior">Anterior</string>
    <string name="parar">Parar</string>
    <string name="proximo">Próximo</string>
    <string name="avancar">Avançar</string>
    <string name="pausar">Pausar</string>
    <string name="registro">Registro</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="enviar">Enviar</string>
</resources>
