<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_fragment">
        <item
            android:id="@+id/nav_estudio"
            android:icon="@drawable/ic_menu_criar"
            android:title="@string/estudio"
            android:checked="true"/>
        <item
            android:id="@+id/nav_grafos_pre_definidos"
            android:icon="@drawable/ic_menu_studio"
            android:title="@string/pre_definidos" />
        <item
            android:id="@+id/nav_algoritmos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/algoritmos" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ferramentas" />
    </group>

    <item android:title="@string/arquivos">
        <menu>
            <item
                android:id="@+id/nav_abrir"
                android:icon="@drawable/ic_menu_abrir"
                android:title="@string/abrir" />
            <item
                android:id="@+id/nav_salvar"
                android:icon="@drawable/ic_menu_salvar"
                android:title="@string/salvar" />
            <item
                android:id="@+id/nav_exportar"
                android:icon="@drawable/ic_menu_exportar"
                android:title="@string/exportar" />
        </menu>
    </item>

    <item android:title="@string/comunicar">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
