<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAlgoritmosActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textGrid"
            android:text="@string/grid_layout"
            android:textSize="@dimen/tamanho_text_grid"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margem_grid_layout">

        <!-- Linha 1 -->

        <!-- Coluna 1 -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/margem_card_view"
            android:layout_marginLeft="@dimen/margem_card_view"
            android:layout_marginRight="@dimen/margem_card_view"
            app:cardElevation="@dimen/elevacao_card_view"
            app:cardCornerRadius="@dimen/raio_card_view">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/margem_card_view"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                
                <ImageView
                    android:src="@drawable/me_time"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grid_1_1"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/tamanho_texto_card"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Coluna 2 -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/margem_card_view"
            android:layout_marginLeft="@dimen/margem_card_view"
            android:layout_marginRight="@dimen/margem_card_view"
            app:cardElevation="@dimen/elevacao_card_view"
            app:cardCornerRadius="@dimen/raio_card_view">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/margem_card_view"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/family_time"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grid_1_2"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/tamanho_texto_card"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Linha 2 -->

        <!-- Coluna 1 -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/margem_card_view"
            android:layout_marginLeft="@dimen/margem_card_view"
            android:layout_marginRight="@dimen/margem_card_view"
            app:cardElevation="@dimen/elevacao_card_view"
            app:cardCornerRadius="@dimen/raio_card_view">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/margem_card_view"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/lovely_time"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grid_2_1"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/tamanho_texto_card"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Coluna 2 -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/margem_card_view"
            android:layout_marginLeft="@dimen/margem_card_view"
            android:layout_marginRight="@dimen/margem_card_view"
            app:cardElevation="@dimen/elevacao_card_view"
            app:cardCornerRadius="@dimen/raio_card_view">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/margem_card_view"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/team_time"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grid_2_2"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/tamanho_texto_card"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Linha 3 -->

        <!-- Coluna 1 -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/margem_card_view"
            android:layout_marginLeft="@dimen/margem_card_view"
            android:layout_marginRight="@dimen/margem_card_view"
            app:cardElevation="@dimen/elevacao_card_view"
            app:cardCornerRadius="@dimen/raio_card_view">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/margem_card_view"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/friends"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grid_3_1"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/tamanho_texto_card"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Coluna 2 -->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/margem_card_view"
            android:layout_marginLeft="@dimen/margem_card_view"
            android:layout_marginRight="@dimen/margem_card_view"
            app:cardElevation="@dimen/elevacao_card_view"
            app:cardCornerRadius="@dimen/raio_card_view">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/margem_card_view"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/calendar"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/grid_3_2"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/tamanho_texto_card"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </GridLayout>

    </LinearLayout>

</ScrollView>